Firmware mapper, service, repository - refactoring